# nft-marketplace-rs

./: .gitmodules  Cargo.toml  docker-compose.yaml
ipfs-api/: Cargo.toml
ipfs-api/ipfs-api-derive/: Cargo.toml
ipfs-api/ipfs-api-derive/src/: lib.rs
ipfs-api/src/: client.rs  error.rs  lib.rs  request.rs  response.rs
ipfs-api/src/req/: add.rs  dag.rs  files.rs
ipfs-api/src/resp/: add.rs  dag.rs  files.rs  mod.rs
migrations/2024-05-02-061537_create_user/: up.sql
migrations/2024-05-02-084618_create_collections/: down.sql  up.sql
migrations/2024-05-05-144227_create_nft/: down.sql  up.sql
migrations/2024-05-05-145019_create_nft_traits/: down.sql  up.sql
src/: app_state.rs  errors.rs  main.rs  middlewares.rs  services.rs  util.rs
src/domain/: collection.rs  file.rs  mod.rs  nft.rs  token.rs  user.rs
src/domain/models/: mod.rs  token.rs
src/middlewares/: auth.rs  error.rs
src/models/: collection.rs  mod.rs  nft.rs  nft_trait.rs  schema.rs  user.rs
src/routers/: mod.rs
src/routers/api/: mod.rs  token_api.rs  upload_api.rs
web3-api/: Cargo.toml
web3-api/src/: lib.rs
