workspace = { members = ["ipfs-api", "web3-api"] }
[package]
name = "nft-marketplace-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
async-graphql = { version = "7.0.3", features = ["chrono"] }
async-graphql-axum = { version = "7.0.3" }
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["cors"] }
diesel = { version = "2.1.6", features = [
  "postgres",
  "r2d2",
  "uuid",
  "chrono",
] }
futures-util = { version = "0.3.30" }
serde_json = { version = "1.0.116" }
serde = { version = "1.0.198", features = [] }
tower = { version = "0.4.13", features = ["timeout"] }
jsonwebtoken = "9.3.0"
chrono = { version = "0.4.19", features = ["serde"] }
once_cell = "1.19.0"
dotenv = "0.15.0"
reqwest = { version = "0.12.4", features = ["multipart"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
ipfs-api = { path = "ipfs-api" }
