[package]
name = "ipfs-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0", features = ["std", "alloc"] }
serde_urlencoded = { version = "0.7.0", features = [] }
serde_json = { version = "1.0", features = [] }
thiserror = { version = "1.0", features = [] }
log = { version = "0.4", features = [] }
ipfs-api-derive = { path = "ipfs-api-derive" }