[package]
name = "ipfs-api-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2" }
quote = { version = "1" }
serde_urlencoded = { version = "0.7" }

[lib]
proc-macro = true
path = "src/lib.rs"
